--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,12 @@
-*.acn
-*.acr
-*.alg
+*~
+*.pdf
 *.aux
+*.log
+*.toc
+*.out
 *.bbl
 *.blg
-*.dvi
-*.fdb_latexmk
-*.glg
-*.glo
-*.gls
-*.idx
-*.ilg
-*.ind
-*.ist
-*.lof
-*.log
-*.lot
-*.maf
-*.mtc
-*.mtc0
-*.nav
-*.nlo
-*.out
-*.pdfsync
-*.ps
-*.snm
-*.synctex.gz
-*.toc
-*.vrb
-*.xdy
-*.tdo
+*.make
+*.d
+*.fls
+*.temp
